<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/home"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title"
            android:textSize="20sp"
            android:textColor="@color/white_color"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/refresh"/>
    </RelativeLayout>

    <edu.cqu.rsmungshare.myview.LoadingAnimation
        android:id="@+id/loading_animation"
        style="@style/LoadingAnimationStyle"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        app:main_color="@color/white_color"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loading_animation"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/server"/>
            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:textColor="@color/white_color"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_fun"
                android:textColor="@color/white_color"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@color/shallow_gray_color"
                android:textSize="20sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_local_ip"
                android:textColor="@color/white_color"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/local_ip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/shallow_gray_color"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                android:textIsSelectable="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_target_ip"
                android:textColor="@color/white_color"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>
            <EditText
                android:id="@+id/target_ip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/shallow_gray_color"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_corner_no_solid"
                android:paddingHorizontal="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_main"
                android:textColor="@color/white_color"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>
            <Switch
                android:id="@+id/sw_enterMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingHorizontal="10dp"
                android:background="@drawable/round_corner"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/clear_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/clear_records"
            android:textColor="@color/white_color"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>